force-app/main/default/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visits__c</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>